# ChangeLog for net-print/gnome-cups-manager
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/gnome-cups-manager/Attic/ChangeLog,v 1.40 2005/03/17 16:42:38 lanius Exp $

  17 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
  gnome-cups-manager-0.28.ebuild:
  fix libgnomecups dependecy

  11 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
  gnome-cups-manager-0.28.ebuild, gnome-cups-manager-0.30.ebuild:
  move gnome-cups-manager.desktop to /usr/share/applications

  10 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
  +files/gnome-cups-manager.desktop, gnome-cups-manager-0.28.ebuild,
  gnome-cups-manager-0.30.ebuild:
  install control-center menu entry, bug #53817

*gnome-cups-manager-0.30 (09 Mar 2005)

  09 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
  +gnome-cups-manager-0.30.ebuild:
  version bump

  06 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
  gnome-cups-manager-0.28.ebuild:
  stable on amd64

  21 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-cups-manager-0.28.ebuild:
  Stable on sparc

  21 Jan 2005; Mike Gardiner <obz@gentoo.org>
  gnome-cups-manager-0.28.ebuild:
  Marked stable on x86

  16 Jan 2005; Guy Martin <gmsoft@gentoo.org> gnome-cups-manager-0.23.ebuild:
  Stable on hppa.

  27 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-cups-manager-0.23.ebuild:
  Stable on sparc

  26 Dec 2004; Joe McCann <joem@gentoo.org> gnome-cups-manager-0.28.ebuild:
  bump libgnomecups dep to minimum requirement, closes bug 75677. Also bumping
  intltool dep to 0.29, when the xml-parser dep was added.

  13 Nov 2004; Hardave Riar <hardave@gentoo.org>
  gnome-cups-manager-0.23.ebuild:
  Re-added ~mips keyword that was removed.

*gnome-cups-manager-0.28 (24 Dec 2004)

  24 Dec 2004; Heinrich Wendel <lanius@gentoo.org>
  gnome-cups-manager-0.23.ebuild, +gnome-cups-manager-0.28.ebuild:
  version bump; mark 0.23 stable on x86
