@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/gnome-cups-manager/Attic/gnome-cups-manager-0.28.ebuild,v 1.10 2005/03/17 16:42:38 lanius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/gnome-cups-manager/Attic/gnome-cups-manager-0.28.ebuild,v 1.11 2005/04/01 22:15:31 pylon Exp $
 
 inherit gnome2 eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc ~alpha sparc hppa ia64 amd64 arm ~mips"
+KEYWORDS="x86 ppc ~alpha sparc hppa ia64 amd64 arm ~mips"
 IUSE=""
 
 RDEPEND=">=dev-libs/glib-2
