@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/libgnomecups/Attic/libgnomecups-0.1.14.ebuild,v 1.5 2005/03/06 14:09:44 lanius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/libgnomecups/Attic/libgnomecups-0.1.14.ebuild,v 1.6 2005/04/01 22:14:56 pylon Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org"
 
 LICENSE="GPL-2 LGPL-2.1"
 SLOT="0"
-KEYWORDS="x86 ~ppc ~alpha sparc hppa ia64 amd64 ~mips arm ~ppc64"
+KEYWORDS="x86 ppc ~alpha sparc hppa ia64 amd64 ~mips arm ~ppc64"
 IUSE=""
 
 RDEPEND=">=dev-libs/glib-2
