@@ -1,6 +1,10 @@
 # ChangeLog for net-print/gnome-cups-manager
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/gnome-cups-manager/Attic/ChangeLog,v 1.40 2005/03/17 16:42:38 lanius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/gnome-cups-manager/Attic/ChangeLog,v 1.41 2005/04/01 22:15:31 pylon Exp $
+
+  01 Apr 2005; Lars Weiler <pylon@gentoo.org>
+  gnome-cups-manager-0.28.ebuild:
+  Stable on ppc.
 
   17 Mar 2005; Heinrich Wendel <lanius@gentoo.org>
   gnome-cups-manager-0.28.ebuild:
